@@ -2,8 +2,10 @@ package io.quarkus.resteasy.reactive.server.deployment;
 
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.APPLICATION_PATH;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.CONTEXT;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.OBJECT;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.PATH;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.PROVIDER;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.SINGLETON;
 
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
@@ -211,7 +213,7 @@ public class ResteasyReactiveCDIProcessor {
     @BuildStep
     void pathInterfaceImpls(Optional<ResourceScanningResultBuildItem> resourceScanningResultBuildItem,
             BuildProducer<AdditionalBeanBuildItem> additionalBeanBuildItemBuildProducer) {
-        if (!resourceScanningResultBuildItem.isPresent()) {
+        if (resourceScanningResultBuildItem.isEmpty()) {
             return;
         }
         ResourceScanningResult resourceScanningResult = resourceScanningResultBuildItem.get().getResult();
@@ -219,7 +221,7 @@ public class ResteasyReactiveCDIProcessor {
         List<String> impls = new ArrayList<>();
         for (Map.Entry<DotName, String> i : pathInterfaces.entrySet()) {
             List<ClassInfo> candidateBeans = new ArrayList<>(1);
-            for (ClassInfo clazz : resourceScanningResult.getIndex().getAllKnownImplementors(i.getKey())) {
+            for (ClassInfo clazz : resourceScanningResult.getIndex().getAllKnownImplementations(i.getKey())) {
                 if (!Modifier.isAbstract(clazz.flags())) {
                     if ((clazz.enclosingClass() == null || Modifier.isStatic(clazz.flags())) &&
                             clazz.enclosingMethod() == null) {
@@ -228,13 +230,38 @@ public class ResteasyReactiveCDIProcessor {
                 }
             }
             if (candidateBeans.size() == 1) {
-                impls.add(candidateBeans.get(0).name().toString());
+                impls.add(candidateBeans.getFirst().name().toString());
             }
         }
         if (!impls.isEmpty()) {
             additionalBeanBuildItemBuildProducer
                     .produce(AdditionalBeanBuildItem.builder().setUnremovable().addBeanClasses(impls.toArray(new String[0]))
                             .build());
+        }
+    }
+
+    @BuildStep
+    void registerAbstractResourceChildrenWithoutPath(Optional<ResourceScanningResultBuildItem> resourceScanningResultBuildItem,
+            BuildProducer<AdditionalBeanBuildItem> additionalBeanBuildItemBuildProducer) {
+        if (resourceScanningResultBuildItem.isEmpty()) {
+            return;
+        }
+        ResourceScanningResult resourceScanningResult = resourceScanningResultBuildItem.get().getResult();
+        List<String> additionalBeansToRegister = null;
+        for (ClassInfo resource : resourceScanningResult.getScannedResources().values()) {
+            if (!resource.isAbstract() && !resource.hasAnnotation(PATH) && !OBJECT.equals(resource.superName())) {
+                ClassInfo parentClass = resourceScanningResult.getIndex().getClassByName(resource.superName());
+                if (parentClass != null && parentClass.isAbstract() && parentClass.hasAnnotation(PATH)) {
+                    if (additionalBeansToRegister == null) {
+                        additionalBeansToRegister = new ArrayList<>();
+                    }
+                    additionalBeansToRegister.add(resource.name().toString());
+                }
+            }
+        }
+        if (additionalBeansToRegister != null) {
+            additionalBeanBuildItemBuildProducer.produce(AdditionalBeanBuildItem.builder().setUnremovable()
+                    .addBeanClasses(additionalBeansToRegister).setDefaultScope(SINGLETON).build());
         }
     }
 
